# pycompare

./: .gitignore  .pre-commit-config.yaml  README.md  logger_config.json  logging.json  main.py  pyproject.toml
example/exe_test/: build_exe.ps1  test_gui.py
example/psutil_debug/: readme.txt
release_exe/: build_exe.ps1  build_exe.py
scripts/: git_versioning_callback.py  logger_config.py
src/pycompare/: config.py  logger.py  logging_config.py  pycompare.py  search_dialog.py
src/pycompare/compare_core/: compare_core.py  core_qwen.py
src/pycompare/workspace/: editor.py  events_queue.py  file_drop.py  file_selector.py  search_dialog.py  workspace.py
