[build-system]
requires = [
    "setuptools>=42", 
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "pycompare-gui"
dynamic = ["version"]  # 声明动态版本
description = "文本对比工具"
authors = [
    {name = "shibing chen", email = "binnchern@163.com"}
]
readme = "README.md"
license = "MIT"
#repository = "https://gitee.com/binnchern/cmdbox"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
]
requires-python = ">=3.11.2"

[project.optional-dependencies]
dev = [
    "pre-commit>4.0",
    "setuptools-git-versioning>=2.0,<3",
]

[project.scripts]
pycompare-gui = "pycompare.pycompare:cli"

#[project.gui-scripts]
#pycompare = "pycompare.pycompare:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pycompare"
]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "scripts.git_versioning_callback:install_version"
