[build-system]
requires = [
    "setuptools>=42", 
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "pycompare-gui"
dynamic = ["version"]  # 声明动态版本
description = "文本对比工具"
readme = "README.md"
license = "GPL-3.0"

dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.2",
    "psutil>=7.0.0",
    "tkinterdnd2>=0.4.3",
]
requires-python = ">=3.11.2"

[project.optional-dependencies]
dev = [
    "pre-commit>4.0",
    "setuptools-git-versioning>=2.0,<3",
    "nuitka>=2.7.14",
    "zstandard>=0.24.0",
]

[project.scripts]
pycompare-gui = "pycompare.pycompare:cli"

#[project.gui-scripts]
#pycompare-gui = "pycompare.pycompare:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pycompare"
]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "scripts.git_versioning_callback:install_version"
